build/k8s/elastic/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: dracon
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "http"
spec:
  defaultBackend:
    service:
      name: dracon-kb-http
      port:
        name: http
  rules:
  - host: kibana.dracon.localhost
  tls:
  - hosts:
    - kibana.dracon.localhost
    secretName: cert-kibana
